--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,15 @@
-.body {
+/* .body {
 
     font-style: normal;
     font-family: 'Times New Roman', Times, serif;
 
-}
+} */
 
 
 #wins #loses #guessSoFar #guessLeft{
 
-    align-items: initial;
+    /* align-items: initial; */
+    font-family: 'Times New Roman', Times, serif;
+
 
 }
