modified files upload 820PM 10_20_18. Still issues with the the for loop not breaking.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,11 @@
     font-family: 'Times New Roman', Times, serif;
 
 } */
+.h1 {
 
+    font-size: 24pt;
+
+}
 
 #wins #loses #guessSoFar #guessLeft{
 
